@@ -1,3 +1,4 @@
+	* make 'close_redudnant_connections' cover more cases
 	* set_piece_deadline() also unfilters the piece (if its priority is 0)
 	* add work-around for bug in windows vista and earlier in GetOverlappedResult
 	* fix traversal algorithm leak in DHT
